Bug 346681 - Unable to find words in 'Region' and 'Comments' columns
Summary: Unable to find words in 'Region' and 'Comments' columns
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: 5.2.90
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Martin Klapetek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-26 02:13 UTC by André Marcelo Alvarenga
Modified: 2015-05-12 20:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2015-04-26 02:13:42 UTC
Try to find a word (in Search Time Zones field).
This word is not displayed if the match is in 'Region' or 'Comments' columns.

Reproducible: Always




Works with KDE4.
Comment 1 David Edmundson 2015-04-26 11:30:28 UTC
It should probably search region too, I'm not very convinced about searching comments.
Comment 2 Martin Klapetek 2015-05-12 20:53:18 UTC
Git commit 72041b7c90c3f4e1d1ec6812813dee84952f3f89 by Martin Klapetek.
Committed on 12/05/2015 at 20:51.
Pushed by mklapetek into branch 'Plasma/5.3'.

[digital-clock] Add timezone filtering by region too

Adds a simple QSortFilterProxyModel on top of TimeZonesModel and
reimplements filterAcceptsRow using QStringMatcher (supposedly faster
according to qtdocs).

REVIEW: 123740
FIXED-IN: 5.3.1

M  +2    -3    applets/digital-clock/package/contents/ui/configTimeZones.qml
M  +1    -0    applets/digital-clock/plugin/digitalclockplugin.cpp
M  +33   -0    applets/digital-clock/plugin/timezonemodel.cpp
M  +22   -0    applets/digital-clock/plugin/timezonemodel.h

http://commits.kde.org/plasma-workspace/72041b7c90c3f4e1d1ec6812813dee84952f3f89