[digital-clock] Add timezone filtering by region too

Adds a simple QSortFilterProxyModel on top of TimeZonesModel and
reimplements filterAcceptsRow using QStringMatcher (supposedly faster
according to qtdocs).

REVIEW: 123740
BUG: 346681
FIXED-IN: 5.3.1